# python-steam-server-runner

./: .env.sample  .gitignore  .python-version  LICENSE  Makefile  README.md  dev-requirments.txt  pyproject.toml  requirements-dev.txt  requirements.txt  todo.mdn
data/appinfo/: 2394010
docs/: gpt.output.  python-coding-standards.md  python-virtual-env-setup.md
docs/config/: .pre-commit-config.yml  pyproject.example.toml
logs/: app.log.2025-06-29  app.log.2025-06-30  app.log.2025-07-01  app.log.2025-07-02  app.log.2025-07-03  app.log.2025-07-04  app.log.2025-07-05
mocks/: appmanifest_2394010.acf
src/server-runner/: commandline.py  jobs.py  main.py  status.py  tasks.py
src/server-runner/config/: config.py  logging.py
src/server-runner/steam/: api_registry.py
src/server-runner/steam/api/: rest_api_base.py
src/server-runner/utils/: managed_process.py  system.py
src/server-runner/workflow/: workflow_factories.py
src/server_runner/: main.py  status_manager.py
src/server_runner/commandline/: commandline.py
src/server_runner/config/: app_config.py
src/server_runner/constants/: steam_app_id.py
src/server_runner/servers/: api_registry.py  create_game_api.py  game_server_manager.py
src/server_runner/servers/api/: rest_api_base.py
src/server_runner/servers/api/games/: palworld_api.py
src/server_runner/servers/steam/: steam_version_manager.py  steamcmd_schema.py
src/server_runner/steam/: api_registry.py  create_game_api.py  factory.py  game_server_manager.py  gsm_setup.py  managed_game_server.py  steam_app_id.py
src/server_runner/steam/api/: api_registry.py  auth_info.py  create_game_api.py  rest_api_base.py
src/server_runner/steam/api/games/: base_rest_api.py  palworld_api.py
src/server_runner/steam/app/: steam_app_id.py
src/server_runner/steam/server/: controller.py  install_resolver.py  manifest_helper.py  process.py  steamcmd_schema.py  version_manager.py
src/server_runner/utils/: cascading_queue.py  managed_process.py  system_metrics.py  wait.py
src/server_runner/validators/: os.py
src/server_runner/workflow/: job_definitions.py  job_ids.py  tasks.py  workflow_builder.py  workflow_catalog.py  workflow_engine.py  workflow_factories.py  workflow_job.py  workflow_queue.py  workflow_setup.py
src/steam-server-runner/steam/: steam_game.py
src/stream-server-runner/: actions.py  jobs.py  main.py  server_action.py  state_checker.py  tasks.py
src/stream-server-runner/steam/: palworld_api.py  server_api.py  steam_game.py
src/stream-server-runner/utils/: cascading_queue.py  parse_files.py  system.py
tests/integration/: helpers.py  test_managed_process.py
