[project]
authors = [{ email = "alextilot@gmail.com", name = "Alex Tilot" }]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []
description = "Python steam server runner."
dynamic = ["version"]
license = "MIT"
name = "steam-server-runner"
readme = "README.md"
requires-python = ">=3.10,<4"

[project.optional-dependencies]
checks = ["mypy==1.9.0", "ruff>=0.3,<0.4"]
docs = ["mkdocs-material>=9,<10"]
tests = [
  "coverage[toml]>=7,<8",
  "httpx>=0.23,<1",
  "pytest>=7,<8",
  "pytest-mock>=3,<4",
]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]
fail_under = 70
show_missing = true

[tool.coverage.run]
command_line = "-m pytest"
source = ["server-runner", "tests"]


[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]


[tool.ruff]
# Set the maximum line length to 88 (Black's default)
line-length = 88

# Enable automatic fixing of fixable violations
fix = true

# Target Python 3.11+ syntax (recommended for 2025)
# Options: py38, py39, py310, py311, py312, py313, py314
target-version = "py313"

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
]

# Never ignore these critical errors
ignore = [
    "E501",  # Line too long (handled by formatter)
    "S101",  # Use of assert (acceptable in tests)
]

[tool.ruff.lint.per-file-ignores]
# Allow print statements in scripts
"scripts/*" = ["T20"]
# Allow assert statements in tests  
"tests/*" = ["S101"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Ensure imports are properly sorted
[tool.ruff.lint.isort]
# TODO: Replace "your_package_name" with the actual name of your package in the following section.
known-first-party = ["server_runner"]

[tool.pyright]
include = ["src"]
executionEnvironments = [
  { root = "src" }
]
exclude = [
    "**/__pycache__",           # Python bytecode cache
    "**/.git",                  # Git repository data
    "**/.venv",                 # Virtual environment (venv)
    "**/.env",                  # Virtual environment (.env)
    "**/venv",                  # Virtual environment (venv)
    "**/env",                   # Virtual environment (env)
    "build",                    # Python package build directory
    "dist",                     # Python package distribution directory
    ".pytest_cache",            # pytest cache directory
    ".mypy_cache",              # mypy cache directory
    ".ruff_cache",              # Ruff cache directory
    ".coverage",                # Coverage data file
    ".DS_Store"                 # macOS system files
]

# Basic configuration
typeCheckingMode = "strict"
pythonVersion = "3.13"                 # Match Ruff 
pythonPlatform = "All"


# Additional strict checks beyond default strict mode
reportMissingTypeStubs = false         # Avoid noise from third-party libraries
reportUnknownMemberType = false        # Avoid noise from third-party libraries
reportUntypedBaseClass = true          # Requires type annotations on base classes
reportMissingModuleSource = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnusedImport = "warning"
reportUntypedClassDecorator = true     # Requires type annotations on class decorators
reportPrivateUsage = true              # Prevents access to private members from outside class
reportConstantRedefinition = true      # Prevents redefinition of Final variables

